--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,28 @@
 ---
 layout: page
 title: Contacts
-
+permalink: /contacts/
+body_class: page
 ---
 
-Contacts
+<article>
+  <h1>Contacts</h1>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim explicabo
+    amet quasi odio quas velit eos, obcaecati, molestias consequatur soluta
+    sapiente fugiat ab ullam! Vero recusandae obcaecati ad at corporis.
+  </p>
+  <p>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim explicabo
+    amet quasi odio quas velit eos, obcaecati, molestias consequatur soluta
+    sapiente fugiat ab ullam! Vero recusandae obcaecati ad at corporis.
+  </p>
+  <iframe
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13210.313324391922!2d-118.3666370802246!3d34.131543300000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2be4740981953%3A0x5101b59d70e19bf0!2sUniversal%20City%2FStudio%20City!5e0!3m2!1sbg!2sus!4v1623639925108!5m2!1sbg!2sus"
+    width="600"
+    height="450"
+    style="border: 0"
+    allowfullscreen=""
+    loading="lazy"
+  ></iframe>
+</article>
