--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: page
-title: Home
+title: Moko
 body_class: page
 ---
 <h2>H2</h2>
